--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -196,6 +196,8 @@ endpoint_url = http://localhost:8080
 [api]
 # How to authenticate users of the API
 auth_backend = airflow.api.auth.backend.default
+# Only Needed for token authentication
+api_secret_key = {API_SECRET_KEY}
 
 [lineage]
 # what lineage backend to use
